fix ios trebek bug https://stackoverflow.com/questions/24077725/mobile-safari-sometimes-does-not-trigger-the-click-event

--- a/assets/css/tv/reveal_final_jeopardy_scores.scss
+++ b/assets/css/tv/reveal_final_jeopardy_scores.scss
@@ -16,11 +16,11 @@
 
         .answer {
             animation: slidein .5s forwards;
-            animation-delay: 2s;
+            animation-delay: 4s;
         }
         .wager {
             animation: slidein .5s forwards;
-            animation-delay: 4s;
+            animation-delay: 8s;
         }
     }
     .podium {
